--- a/swe.html
+++ b/swe.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>swe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <header>
+        <div id="greenBar"></div>
+        <div id="headerContent"></div>
+    </header>
+    <main>
+        <div id="content"></div>
+    </main>
 </body>
 </html>
