greeen bar and animated text created

--- a/swe.html
+++ b/swe.html
@@ -8,12 +8,35 @@
 </head>
 <body>
     
-    <header>
-        <div id="greenBar"></div>
-        <div id="headerContent"></div>
-    </header>
-    <main>
-        <div id="content"></div>
-    </main>
+        <header>
+            <div id="greenBar">
+                <p>Self-powerd Sensors</p>
+            </div>
+            <div id="headerContent">
+                <img src="assets/ESCOM-ES.png" alt="Escom-logo">
+      <!--           <div class="navbar">
+                    <a href="http://">Home</a>
+                    <a href="http://">Products</a>
+                    <a href="http://">Technology</a>
+                    <a href="http://">Company</a>
+                    <a href="http://">Blog</a>
+                    <a href="http://">Contact Us</a>
+                </div>
+                <div class="searchBarIcon">
+                    <img src="assets/search.svg" alt="searchButton">
+                </div>
+                <div class="ig">
+                    <img src="assets/instagram.svg" alt="instagramLogo">
+                </div>
+                <div class="contactUsLogo">
+                    <p>Contact Us</p>
+                    <img src="assets/favicon.ico" alt="EscomIcon">
+                </div> -->
+            </div>
+        </header>
+        <main>
+            <div id="content"></div>
+        </main>
+
 </body>
 </html>
