font family was changed. navbar was fixed.

--- a/swe.html
+++ b/swe.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>swe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="quicksand">
     
         <header>
             <div id="greenBar">
@@ -14,7 +17,7 @@
             </div>
             <div id="headerContent">
                 <img src="assets/ESCOM-ES.png" alt="Escom-logo">
-      <!--           <div class="navbar">
+         <div class="navbar">
                     <a href="http://">Home</a>
                     <a href="http://">Products</a>
                     <a href="http://">Technology</a>
@@ -22,16 +25,16 @@
                     <a href="http://">Blog</a>
                     <a href="http://">Contact Us</a>
                 </div>
-                <div class="searchBarIcon">
-                    <img src="assets/search.svg" alt="searchButton">
+                 <div class="searchBarIcon">
+                    <img src="assets/search.svg" alt="searchButton" width="23px">
                 </div>
                 <div class="ig">
-                    <img src="assets/instagram.svg" alt="instagramLogo">
+                    <img src="assets/instagram.svg" alt="instagramLogo" width="23px">
                 </div>
                 <div class="contactUsLogo">
                     <p>Contact Us</p>
-                    <img src="assets/favicon.ico" alt="EscomIcon">
-                </div> -->
+                    <img src="assets/favicon.ico" alt="EscomIcon" width="23px">
+                </div> 
             </div>
         </header>
         <main>
