overflow problem was occured because of padding and gap

--- a/swe.html
+++ b/swe.html
@@ -25,16 +25,18 @@
                     <a href="http://">Blog</a>
                     <a href="http://">Contact Us</a>
                 </div>
-                 <div class="searchBarIcon">
-                    <img src="assets/search.svg" alt="searchButton" width="23px">
-                </div>
-                <div class="ig">
-                    <img src="assets/instagram.svg" alt="instagramLogo" width="23px">
-                </div>
-                <div class="contactUsLogo">
-                    <p>Contact Us</p>
-                    <img src="assets/favicon.ico" alt="EscomIcon" width="23px">
-                </div> 
+           <div class="headerRight">
+            <div class="searchBarIcon">
+                <img src="assets/search.svg" alt="searchButton" width="35px">
+            </div>
+            <div class="ig">
+                <img src="assets/instagram.svg" alt="instagramLogo" width="25px">
+            </div>
+            <div class="contactUsLogo">
+                <p>Contact Us</p>
+                <img src="assets/favicon.ico" alt="EscomIcon" width="30px">
+            </div> 
+           </div>
             </div>
         </header>
         <main>
