logo was changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Self-powerd Sensors</p>
             </div>
             <div id="headerContent">
-                <img src="assets/ESCOM-ES.png" alt="Escom-logo">
+                <img src="assets/8070152.jpg" alt="">
          <div class="navbar">
                     <a href="http://">Home</a>
                     <a href="http://">Products</a>
@@ -34,7 +34,7 @@
             </div>
             <div class="contactUsLogo">
                 <p>Contact Us</p>
-                <img src="assets/favicon.ico" alt="EscomIcon" width="30px">
+                <img src="assets/8070152.jpg" alt="" width="30px">
             </div> 
            </div>
             </div>
