--- a/index.html
+++ b/index.html
@@ -3,45 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>swe</title>
+    <title>Self-powered Sensors</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <script defer src="script.js"></script>
 </head>
 <body class="quicksand">
-    
+
+    <main>
+        <!-- Üstteki Yeşil Bar -->
+        <div id="greenBar">
+            <p>Self-powered Sensors - The Future of Energy Efficient Technology</p>
+        </div>
+
+        <!-- Header (Logo + Navbar + Search & Social Icons) -->
         <header>
-            <div id="greenBar">
-                <p>Self-powerd Sensors</p>
-            </div>
-            <div id="headerContent">
-                <img src="assets/8070152.jpg" alt="">
-         <div class="navbar">
-                    <a href="http://">Home</a>
-                    <a href="http://">Products</a>
-                    <a href="http://">Technology</a>
-                    <a href="http://">Company</a>
-                    <a href="http://">Blog</a>
-                    <a href="http://">Contact Us</a>
+            <div class="headerContent">
+                <div class="logo">
+                    <img src="assets/ESCOM-ES.png" alt="Company Logo">
                 </div>
-           <div class="headerRight">
-            <div class="searchBarIcon">
-                <img src="assets/search.svg" alt="searchButton" width="35px">
-            </div>
-            <div class="ig">
-                <img src="assets/instagram.svg" alt="instagramLogo" width="25px">
-            </div>
-            <div class="contactUsLogo">
-                <p>Contact Us</p>
-                <img src="assets/8070152.jpg" alt="" width="30px">
-            </div> 
-           </div>
+               
+
+                <!-- Navbar -->
+                <nav>
+                    <div class="hamburger-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="navbar">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Technology</a></li>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+
+                <!-- Sağ Taraf (Arama + Sosyal Medya + Contact Us) -->
+                <div class="headerRight">
+                    <div class="searchBarIcon">
+                        <img src="assets/search.svg" alt="Search Icon" width="35px">
+                    </div>
+                    <div class="ig">
+                        <img src="assets/instagram.svg" alt="Instagram Logo" width="25px">
+                    </div>
+                    <div class="contactUsLogo">
+                        <p>Contact Us</p>
+                        <img src="assets/favicon.ico" alt="" width="30px">
+                    </div> 
+                </div>
             </div>
         </header>
-        <main>
-            <div id="content"></div>
-        </main>
+
+        <!-- Ana İçerik Alanı -->
+        <section id="content">
+            <h1>Welcome to Self-Powered Sensors</h1>
+            <p>Discover our latest innovations in self-powered technology.</p>
+        </section>
+    </main>
 
 </body>
 </html>
