navbar düzenlenmeden onceki hali

--- a/index.html
+++ b/index.html
@@ -3,68 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Self-powered Sensors</title>
+    <title>Wireless Electricity | Cost Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
 </head>
-<body class="quicksand">
-
-    <main>
-        <!-- Üstteki Yeşil Bar -->
-        <div id="greenBar">
-            <p>Self-powered Sensors - The Future of Energy Efficient Technology</p>
-        </div>
-
-        <!-- Header (Logo + Navbar + Search & Social Icons) -->
-        <header>
-            <div class="headerContent">
-                <div class="logo">
-                    <img src="assets/ESCOM-ES.png" alt="Company Logo">
-                </div>
-               
-
-                <!-- Navbar -->
-                <nav>
-                    <div class="hamburger-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <ul class="navbar">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Technology</a></li>
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </nav>
-
-                <!-- Sağ Taraf (Arama + Sosyal Medya + Contact Us) -->
-                <div class="headerRight">
-                    <div class="searchBarIcon">
-                        <img src="assets/search.svg" alt="Search Icon" width="35px">
-                    </div>
-                    <div class="ig">
-                        <img src="assets/instagram.svg" alt="Instagram Logo" width="25px">
-                    </div>
-                    <div class="contactUsLogo">
-                        <p>Contact Us</p>
-                        <img src="assets/favicon.ico" alt="" width="30px">
-                    </div> 
-                </div>
+<body>
+    <div class="top-banner">
+        <span class="marquee">Self Powered Sensors - Revolutionizing Wireless Energy Solutions</span>
+    </div>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="assets/ESCOM-ES.png" alt="WirelessPower Logo">
             </div>
-        </header>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#technology">Technology</a></li>
+                <li><a href="#company">Company</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+            <div class="hamburger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+        </nav>
+    </header>
 
-        <!-- Ana İçerik Alanı -->
-        <section id="content">
-            <h1>Welcome to Self-Powered Sensors</h1>
-            <p>Discover our latest innovations in self-powered technology.</p>
-        </section>
-    </main>
-
+    <section class="hero">
+        <h1>Wireless Electricity Cost Calculator</h1>
+        <p>Calculate the cost efficiency of our wireless power solutions.</p>
+        <button class="cta-btn">Get Started</button>
+        <div class="wifi-icon" id="wifi-icon"></div>
+    </section>
 </body>
 </html>
