header was completed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireless Electricity | Cost Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
 </head>
-<body>
+<body class="outfit">
     <div class="top-banner">
         <span class="marquee">Self Powered Sensors - Revolutionizing Wireless Energy Solutions</span>
     </div>
