product list was added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Wireless Electricity | Cost Calculator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
 </head>
 <body class="outfit">
@@ -35,11 +35,36 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Wireless Electricity Cost Calculator</h1>
-        <p>Calculate the cost efficiency of our wireless power solutions.</p>
-        <button class="cta-btn">Get Started</button>
-        <div class="wifi-icon" id="wifi-icon"></div>
+    <section class="container">
+        <!-- Sidebar -->
+        <aside class="sidebar">
+            <h3>Product Categories</h3>
+            <ul class="product-list">
+                <li class="product-item">Analytical</li>
+                <li class="product-item">Discrete</li>
+                <li class="product-item">DP Pressure</li>
+                <li class="product-item">High Density Temperature</li>
+                <li class="product-item">Inline Pressure</li>
+                <li class="product-item">Level</li>
+                <li class="product-item">Position </li>
+                <li class="product-item">Monitoring</li>
+                <li class="product-item">Standard Temperature</li>
+                <li class="product-item">Temperature</li>
+                <li class="product-item">Vibration Monitoring</li>
+                <li class="product-item">Rosemount 928</li>
+                <li class="product-item">Gateway</li>
+                <li class="product-item">Smart Power</li>
+            </ul>
+        </aside>
+
+        <!-- Main Content -->
+        <main class="content">
+            <section class="hero">
+                <h1>Wireless Electricity Cost Calculator</h1>
+                <p>Calculate the cost efficiency of our wireless power solutions.</p>
+                <button class="cta-btn">Get Started</button>
+            </section>
+        </main>
     </section>
 </body>
 </html>
