all product was added

--- a/index.html
+++ b/index.html
@@ -40,20 +40,71 @@
         <aside class="sidebar">
             <h3>Product Categories</h3>
             <ul class="product-list">
-                <li class="product-item">Analytical</li>
-                <li class="product-item">Discrete</li>
-                <li class="product-item">DP Pressure</li>
-                <li class="product-item">High Density Temperature</li>
-                <li class="product-item">Inline Pressure</li>
-                <li class="product-item">Level</li>
-                <li class="product-item">Position </li>
-                <li class="product-item">Monitoring</li>
-                <li class="product-item">Standard Temperature</li>
-                <li class="product-item">Temperature</li>
-                <li class="product-item">Vibration Monitoring</li>
-                <li class="product-item">Rosemount 928</li>
-                <li class="product-item">Gateway</li>
-                <li class="product-item">Smart Power</li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="Analytical">
+                    <span>Analytical</span>
+                    <div class="product-info">High precision measurement devices</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="Discrete">
+                    <span>Discrete</span>
+                    <div class="product-info">Switching and sensing solutions</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="DP Pressure">
+                    <span>DP Pressure</span>    
+                    <div class="product-info">Accurate pressure monitoring</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="High Density Temperature">
+                    <span>Inline Pressure</span>
+                    <div class="product-info">Advanced temperature sensors</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="Analytical">
+                    <span>Level</span>
+                    <div class="product-info">High precision measurement devices</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="Discrete">
+                    <span>Position</span>
+                    <div class="product-info">Switching and sensing solutions</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="DP Pressure">
+                    <span>Monitoring</span>
+                    <div class="product-info">Accurate pressure monitoring</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="High Density Temperature">
+                    <span>Standart Temperture</span>
+                    <div class="product-info">Advanced temperature sensors</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="Discrete">
+                    <span>Temperture</span>
+                    <div class="product-info">Switching and sensing solutions</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="DP Pressure">
+                    <span>Vibration Monitoring</span>
+                    <div class="product-info">Accurate pressure monitoring</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="High Density Temperature">
+                    <span>Rosemount 928</span>
+                    <div class="product-info">Advanced temperature sensors</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="DP Pressure">
+                    <span>Gateway</span>
+                    <div class="product-info">Accurate pressure monitoring</div>
+                </li>
+                <li class="product-item">
+                    <img src="assets/high_dentist_temp.png" alt="High Density Temperature">
+                    <span>Smart Power</span>
+                    <div class="product-info">Advanced temperature sensors</div>
+                </li>
             </ul>
         </aside>
 
